  * Switch to encrypted search for Google
    - update debian/searchplugins/en-GB/google.xml
    - update debian/searchplugins/en-US/google.xml
    - update debian/searchplugins/en-ZA/google.xml
    - update debian/searchplugins/ja/google-jp.xml
    - update debian/searchplugins/ku/google-ku.xml
  * Add support for autopkgtest, package the xpcshell and reftest testsuites
    and migrate xpcshell-tests to this
    - add firefox-testsuite package in debian/control.in
    - update debian/control
    - add debian/firefox-testsuite.install.in
    - add debian/firefox-testsuite.links.in
    - update debian/build/mozbuild.mk
    - update debian/rules
    - drop xpcshell-tests from debian/build/testsuite.mk
    - add debian/tests/control
    - add debian/tests/xpcshell-tests
    - add debian/testscripts/run_xpcshell_tests
    - add debian/testscripts/run_reftest.in
    - add debian/testscripts/testrunhelper.py.in
    - update debian/config/mozconfig.in to always build with --enable-tests
  * Ensure that the directory provider returns all searchplugin paths during
    the search service xpcshell tests
    - add debian/patches/xpcshell-search-fix-dirprovider.patch
    - update debian/patches/series.in
  * In the docshell xpcshell tests, use the do_get_profile() helper from the
    xpcshell test harness rather than manually setting up a profile folder
    in the application directory, which fails when the application directory
    is read only
    - add debian/patches/xpcshell-docshell-use-get-profile-helper.patch
    - update debian/patches/series.in
  * Use the do_get_profile() helper in the contentprefs xpcshell tests,
    rather than setting up a folder in the application directory, which is
    not writable on an installed system
    - add debian/patches/xpcshell-contentprefs-use-get-profile-helper.patch
    - update debian/patches/series.in
  * Fix the install scope for application plugins being set incorrectly,