@@ -1,0 +1,21 @@
+#!/bin/sh
+
+TESTSUITE_DIR=/$($(dirname $0)/../rules echo-MOZ_TESTDIR 2>/dev/null)
+TMPDIR=$(mktemp -d)
+HOME=$TMPDIR/home
+LOCPATH=$TMPDIR/locales
+
+trap "rm -rf $TMPDIR" EXIT
+
+mkdir $HOME
+mkdir $LOCPATH
+localedef -f UTF-8 -i en_US $LOCPATH/en_US.UTF-8
+
+export HOME=$HOME
+export LOCPATH=$LOCPATH
+export LC_ALL=en_US.UTF-8
+
+# Required for js/src/trace-tests/sunspider/check-date-format-tofte.js
+export TZ=:/usr/share/zoneinfo/posix/US/Pacific
+
+$TESTSUITE_DIR/run_reftest --extra-profile-file=$TESTSUITE_DIR/jsreftest/tests/user.js $TESTSUITE_DIR/jsreftest/tests/jstests.list
